<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ui_welcome_welcome_title">Welcome to DBA-OK</string>
    <string name="ui_welcome_signin_title">Sign Into ManageMyID</string>
    <string name="ui_welcome_email_title">Email Address</string>
    <string name="ui_welcome_email_hint">Enter your email address</string>
    <string name="ui_welcome_password_title">Password</string>
    <string name="ui_welcome_managemyid_title">Setup ManageMyID account here</string>
    
    <string name="app_name">dbaok</string>
    <string name="ui_balance_swipes_title">Swipes Remaining</string>
    <string name="ui_balance_dba_title">DBA Remaining</string>
    
            
</resources>
