<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/Welcome"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_welcome_welcome_title"
        android:gravity="center"
        android:textSize="25sp" />
    
	<TextView
        android:id="@+id/SignIn"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_welcome_signin_title"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/EmailAddress"
        android:layout_marginTop="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_welcome_email_title" 
        android:textSize="10sp" />
    
	<EditText
	    android:id="@+id/EnterEmail"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:hint="@string/ui_welcome_email_hint"
	    android:inputType="textEmailAddress" >
	</EditText>

    
    <TextView
        android:id="@+id/Password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_welcome_password_title" 
        android:textSize="10sp" />
    
	<EditText
	    android:id="@+id/EnterPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:inputType="textPassword" />
	
    <TextView
        android:id="@+id/ManageMyId"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ui_welcome_managemyid_title" 
        android:textSize="10sp" />

</LinearLayout>
